syntax = "proto3";

package user.v1;  // 包名，与目录保持一致

// 指定go的包路径及包名  /表示当前文件路径
option go_package="/;v1";

service UserService{
    rpc LoginByPhone(PhoneLoginRequest) returns (PhoneLoginReply) {}
}

message PhoneLoginRequest{
    int64 Phone = 1;
    int32 VerifyCode = 2;
}

message PhoneLoginReply{
    string Ret = 1;
    string err = 2;
}